# LI1

./: README.md  immutable-towers.cabal
app/: Desenhar.hs  Eventos.hs  ImmutableTowers.hs  Main.hs  Tempo.hs
games/: 1.txt  2.txt  3.txt  5.txt  6.txt  Level1.txt  Level2.txt  Level4.txt  game.txt  game1.txt  game13.txt  game3.txt  game4.txt  game6.txt  game9.txt
lib/: LI12425.hs  Levels.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs
lib/Utils/: Utilitarios.hs  UtilitariosBase.hs  UtilitariosEditor.hs  UtilitariosInimigo.hs  UtilitariosPortal.hs  UtilitariosSaves.hs  UtilitariosTorre.hs
test/: GameSituations.hs  Spec.hs  Tarefa1Spec.hs  Tarefa2Spec.hs  Tarefa3Spec.hs  UtilitariosInimigosSpec.hs  UtilitariosSpec.hs  UtilitariosTorreSpec.hs
test/TData/: TDataTarefa1.hs  TDataTarefa2.hs  TDataTarefa3.hs  TDataUtilitarios.hs  TestData.hs
