cabal-version:   3.4
name:            immutable-towers
version:         0.0.0.0
author:
    Enrico Silva Prazeres <a112068@alunos.uminho.pt>
    Leandro Filipe Lourenço Carvalho <a112021@alunos.uminho.pt>

category:        Game
build-type:      Simple
extra-doc-files: README.md

library
    exposed-modules:
        LI12425
        Tarefa1
        Tarefa2
        Tarefa3
        Utils.Utilitarios
        Utils.UtilitariosBase
        Utils.UtilitariosPortal
        Utils.UtilitariosTorre
        Utils.UtilitariosInimigo
        Utils.UtilitariosEditor
        Levels

    hs-source-dirs:   lib
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        random ^>=1.2.1.1,
        directory

executable immutable-towers
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        ImmutableTowers
        Desenhar
        Eventos
        Tempo

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        gloss ^>=1.13.2.1,
        gloss-juicy ==0.2.3,
        directory,
        immutable-towers

test-suite immutable-towers-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:
        Tarefa1Spec
        Tarefa2Spec
        Tarefa3Spec
        TData.TDataTarefa1
        TData.TDataTarefa2
        TData.TDataTarefa3

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        HUnit ^>=1.6.2.0,
        gloss ^>=1.13.2.1,
        immutable-towers
